@@ -21,6 +21,8 @@ Version 1.9.10, in progress
 - "corrgm" command: make the $test and $pvalue accessors available 
   for the Ljung-Box test at the maximum lag
 - Add three new functions: ghk(), halton() and isnan()
+- The mread() function now allows leading #-comment lines in the
+  plain text file from which a matrix is read
 - Add two new accessors: $pi and $huge
 - Fix for ARMA forecasts: ensure that the dynamic portion starts
   as soon as possible when the --dynamic option is given
